and cannot find it anywhere.

-------------------------------------------------------------------------------

Thu Sep 23 14:55:59 PDT 1999
(Raster)

and dont save colro modifiers in the user config anymore since they have been 
disabled

-------------------------------------------------------------------------------

Thu Sep 23 14:57:35 PDT 1999
(Raster)

get the end of comment thing right :)

-------------------------------------------------------------------------------

Thu Sep 23 15:34:31 PDT 1999
(KainX)

Did I leave that debugging printf() in there?  Surely not!

-------------------------------------------------------------------------------

Thu Sep 23 15:51:32 PDT 1999
(KainX)

Removed color modifiers from the Ganymede theme and added imageclasses
required for Eterm's "auto" mode.  (Note to Christian:  Mine are just
temporary, for testing only.  Please make real ones as you see fit.)
:-)

-------------------------------------------------------------------------------

Fri Sep 24 10:30:08 PDT 1999
(Raster)

hide tooltips when flippign desktop areas :)

-------------------------------------------------------------------------------

Fri Sep 24 10:58:11 PDT 1999
(Raster)

fix slideout segfault bug problem thingy majigo

-------------------------------------------------------------------------------

Fri Sep 24 12:30:53 PDT 1999
(KainX)

If there is no iconbox and the user tries to iconify something, create
a default iconbox.  This code does the exact same thing as selecting
"Create New Iconbox" from the menu (except that it's automatic), so it
should be safe.  But feel free to remove it anyway if you don't think
it's ready for 0.16.  It's just the behavior I think users expect. :-)

-------------------------------------------------------------------------------

Fri Sep 24 13:06:55 PDT 1999
(Raster)

remove iconbox auto create code - add creat eiconbox entyr to 
settings menu aswell