@@ -121,8 +121,8 @@ WarpFocus(int delta)
 		      (ewin->y + ewin->h > 0) && (ewin->y < root.h) &&
 		      (!ewin->skipfocus) && (!ewin->shaded) &&
 		      (!ewin->menu) && (!ewin->pager) && (!ewin->ibox) &&
-		      (!ewin->iconified) && (ewin->client.mwm_decor_title) &&
-		      (ewin->client.mwm_decor_border))
+		      (!ewin->iconified)	/*&& (ewin->client.mwm_decor_title) &&
+						 * (ewin->client.mwm_decor_border) */ )
 		     AddItem(ewin, "", 0, LIST_TYPE_WARP_RING);
 	       }
 	  }
